--- a/css/input.css
+++ b/css/input.css
@@ -121,5 +121,11 @@
   .checkbox-label {
     @apply flex items-start gap-3 pt-4 text-[17px] font-helveticaMedium text-[#999999];
   }
-      
+      .genral-information-pg-main-full .input-field{
+         @apply bg-[#ffffff] border border-[#D9D9D9] text-[#6A6A69]; 
+      }
+
+      .genral-information-pg-main-full .phone-wrapper .input-field{
+        @apply border border-transparent;
+      }
   }
