--- a/css/input.css
+++ b/css/input.css
@@ -128,4 +128,29 @@
       .genral-information-pg-main-full .phone-wrapper .input-field{
         @apply border border-transparent;
       }
+
+       .circle-step {
+            @apply w-8 h-8 rounded-full flex items-center justify-center text-white font-bold;
+        }
+
+        .circle-blue {
+            @apply border-[3px] border-[#4044ED] bg-[#4044ED];
+        }
+
+        .circle-grey {
+            @apply bg-[#BDBDBD] text-white;
+        }
+
+        .card {
+            @apply border border-[#E0E0E0] rounded-xl px-4 py-2 w-full flex flex-col items-center justify-center text-center gap-3;
+        }
+        .card p{
+          @apply text-[#A4A4A4];
+        }
+        .card-active {
+            @apply border-2 border-[#4044ED] shadow-md px-0 pb-0 overflow-hidden;
+        }
+        .card-active p{
+           @apply bg-black text-white py-2 w-full;
+        }
   }
